# ZEN-creator

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  compare_trees.py  pyproject.toml  test.py  test_existing.py  zen_creator_env.yml
.github/: pull_request_template.md
.github/workflows/: bump_and_release.yml  format_lint_typecheck.yml  run_tests.yml
docs/: conf.py  index.rst
docs/files/api/: attribute.rst  carrier.rst  compare_trees.rst  config.rst  conversion_technology.rst  dataset.rst  dataset_collection.rst  element.rst  energy_system.rst  model.rst  retrofitting_technology.rst  sector.rst  storage_technology.rst  techno_economic_dataset.rst  technology.rst  transport_technology.rst  zen_creator.rst
docs/files/developer_guide/: class_diagram.rst  contributing.rst  installation.rst
docs/files/quick_start/: getting_started.rst  installation.rst  logic_and_structure.rst
scripts/: update_changelog.py
tests/end_to_end/: conftest.py  test_from_config.py  test_from_existing.py
tests/end_to_end/fixtures/: config_existing_model.yaml  config_existing_model_v2.yaml  existing_model_elements.py
tests/end_to_end/fixtures/crystal_ball/: system.json
tests/end_to_end/fixtures/existing_model/: system.json
tests/unit/: conftest.py  test_carrier.py  test_conversion_technology.py  test_energy_system.py  test_storage_technology.py  test_template_dataset.py  test_template_dataset_collection.py  test_transport_technology.py
tests/utils/: compare_trees.py
zen_creator/: __init__.py  __main__.py  model.py  sectors.py
zen_creator/datasets/: __init__.py  dataset.py  dataset_collection.py  techno_economic_dataset.py
zen_creator/datasets/combined_datasets/: combined_datasets.py  combined_datasets_electricity.py  combined_datasets_heat.py  combined_datasets_technology_economic_parameters.py
zen_creator/datasets/dataset_collections/: __init__.py  aa_Template.py  dataset_collection.py  dataset_collection_technoeconomic_parameters.py
zen_creator/datasets/datasets/: DIW.py  ECB.py  __init__.py  aa_template.py  dataset.py  nuts_shp.py  potencia.py  tyndp_edges.py
zen_creator/datasets/single_datasets/: DIW.py  ECB.py  entsoe.py  eu_building_observatory.py  eurostat.py  potencia.py  techno_economic_dataset.py  when2heat.py
zen_creator/datasets/techno_economic_dataset/: __init__.py  techno_economic_dataset.py
zen_creator/elements/: __init__.py  carrier.py  conversion_technology.py  element.py  energy_system.py  retrofitting_technology.py  storage_technology.py  technology.py  transport_technology.py
zen_creator/elements/carriers/: __init__.py  aa_template.py  carrier.py  electricity.py  heat.py  lignite.py
zen_creator/elements/conversion_technologies/: __init__.py  aa_template.py  conversion_technology.py  electrode_boiler.py  heat_pump.py  lignite_coal_plant.py  natural_gas_boiler.py  photovoltaics.py  retrofitting_technology.py
zen_creator/elements/energy_systems/: __init__.py  aa_template.py  energy_system.py
zen_creator/elements/storage_technologies/: __init__.py  aa_template.py  natural_gas_storage.py  pumped_hydro.py  storage_technology.py
zen_creator/elements/technologies/: technology.py
zen_creator/elements/transport_technologies/: __init__.py  aa_template.py  natural_gas_pipeline.py  power_line.py  transport_technology.py
zen_creator/utils/: attribute.py  compare_trees.py  default_config.py  element_collection.py  helpers.py  registry.py  singleton_registry_meta.py  system_file.py  units.py
(+192 files in other folders)
